test/interaction/Issue4679.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : Foo → Set ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: ?0 (baz tt) =< ⊥ (blocked on _B_35) Unit =< ?0 (bar tt) (blocked on _B_35)" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue4679.agda:29.45-46: error: [UnequalTerms] ((λ { (bar _) → Unit ; (baz _) → ⊥ ; _ → ⊥ }) x) != ⊥ of type Set when checking the definition of .extendedlambda0" nil)
((last . 3) . (agda2-maybe-goto '("Issue4679.agda" . 755)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
